# fibonacci-sequence-library

./: README.md  pyproject.toml
fibonaccisequencelib/: fibonacci.py  main.py  utils.py
tests/: test_fibonacci.py
