[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibonaccisequencelib"
version = "0.1.0"
description = "A Python library for generating Fibonacci sequences."
readme = "README.md"
authors = [
    { name = "Alpesh Kumar", email = "noreply@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/alpeshkumar9/fibonacci-sequence-library"
repository = "https://github.com/alpeshkumar9/fibonacci-sequence-library"
documentation = "https://github.com/alpeshkumar9/fibonacci-sequence-library/blob/main/README.md"


[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "coverage>=7.3.2",
    "pytest-cov"
]

[project.entry-points.console_scripts]
fibonacci = "fibonaccisequencelib.main:main"

[tool.pytest.ini_options]
addopts = "--cov=fibonaccisequencelib --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "*/fibonaccisequencelib/main.py",
    "*/fibonaccisequencelib/__init__.py",
]